Archive2/59/b61d2f3aceea1b/output
main.c: In function 'main':
main.c:12:17: error: subscripted value is neither array nor pointer nor vector
             a[i][j] = (j+1)*(i+1);
                 ^
main.c:18:30: error: subscripted value is neither array nor pointer nor vector
             printf("%3d",a[i][j]);
                              ^
